@@ -3,6 +3,9 @@ Changelog
 
 14.3-dev0 - (unreleased)
 ---------------------
+* Change: Modified the @@datasets_overview page to use effective/creation date
+  instead of lastUpload
+  [iulianpetchesi refs #102731]
 
 14.2 - (2019-02-21)
 ---------------------
